--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('https://www.w3schools.com/images/w3schools_green.jpg');
+  background-image: url('https://lh3.googleusercontent.com/AQ3bj9bRPy6UWnm-r0XSy-dxk1FqsCjN9TcwDUWVgbVbD1ug-8ItPGYxMaoIB03N0uxNSt6ROcGTHx06WiTtQhS8T2vdCqP7fKygxWvdxDjlQ2ppfhIV9ILYfDxvg_yDfpCt7IlZ0uw');
   height: 100%;
   background-position: center;
   background-size: cover;
