--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/static/favicon.b9532cc.ed88c65f76fa003989a0c683d668c765.png">
+  <title> AD Event Creators </title>
 <style>
 body, html {
   height: 100%;
@@ -54,7 +56,7 @@ hr {
     <p>30 days left</p>
   </div>
   <div class="bottomleft">
-    <p>Website will update soon, For any query contact on <a href="tel:+919328057703">+919328057703</a></p>
+    <p><Mark>Website will update soon, For any query contact on <a href="tel:+919328057703">+919328057703</a></Mark?</p>
     
   </div>
 </div>
