--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/static/favicon.b9532cc.ed88c65f76fa003989a0c683d668c765.png">
+  <link data-vue-tag="ssr" rel="icon" type="image/png" sizes="96x96" href="/assets/static/favicon.b9532cc.ed88c65f76fa003989a0c683d668c765.png">
   <title> AD Event Creators </title>
 <style>
 body, html {
