--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
                 <h4><i class="fa fa-birthday-cake"></i>Birthday Planning</h4>
               </div>
               <div class="content-hide">
-                <p>Different theme based birthday planning for</p>
-                <p class="hidden-sm">Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a
-                  posuere imperdiet.</p>
+                <p>Around the world, birthdays are celebrated as we mark the end of a year and the start of a new one. Relatives and friends gather to share food and drink, bringing gifts and enjoying a special birthday cake. Because these life events occur only once a year, there is a certain amount of pressure on the host to deliver a memorable event.</p>
                 <div class="scroll-to-section"><a href="#section4">More Details.</a></div>
               </div>
             </div>
@@ -107,7 +105,7 @@
           <div class="features-post second-features">
             <div class="features-content">
               <div class="content-show">
-                <h4><i class="fa fa-shower"></i>Anniversary Planning</h4>
+                <h4><i class="fas fa-rings-wedding"></i>Anniversary Planning</h4>
               </div>
               <div class="content-hide">
                 <p>Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet. Donec maximus elementum ex. Cras convallis ex rhoncus, laoreet libero eu, vehicula libero.</p>
@@ -124,10 +122,7 @@
                 <h4><i class="fa fa-book"></i>Corporate Meeting</h4>
               </div>
               <div class="content-hide">
-                <p>Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet.
-                  Donec maximus elementum ex. Cras convallis ex rhoncus, laoreet libero eu, vehicula libero.</p>
-                <p class="hidden-sm">Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a
-                  posuere imperdiet.</p>
+                <p>Events in a corporate environment are usually tools to market externally or internally a message proposed by the brand, the company, the boss. The common denominator of corporate events is the use of events as tools to change internal company behavior or external behavior of customers towards the brand, company or products of the company in question.</p>
                 <div class="scroll-to-section"><a href="#section4">Read More</a></div>
               </div>
             </div>
@@ -148,9 +143,8 @@
         <div class="col-md-12">
           <div id='tabs'>
             <ul>
-              <li><a href='#tabs-1'>Best Education</a></li>
-              <li><a href='#tabs-2'>Top Management</a></li>
-              <li><a href='#tabs-3'>Quality Meeting</a></li>
+              <li><a href='#tabs-1'>Best Event-Planner</a></li>
+              <li><a href='#tabs-2'>Top Decoration</a></li>
             </ul>
             <section class='tabs-content'>
               <article id='tabs-1'>
@@ -181,21 +175,7 @@
                   </div>
                 </div>
               </article>
-              <article id='tabs-3'>
-                <div class="row">
-                  <div class="col-md-6">
-                    <img src="assets/images/choose-us-image-03.png" alt="">
-                  </div>
-                  <div class="col-md-6">
-                    <h4>Quality Meeting</h4>
-                    <p>You are NOT allowed to redistribute this template ZIP file on any template collection website.
-                      However, you can use this template to convert into a specific theme for any kind of CMS platform
-                      such as WordPress. For more information, you shall <a rel="nofollow"
-                        href="https://templatemo.com/contact" target="_parent">contact TemplateMo</a> now.</p>
-                  </div>
-                </div>
-              </article>
-            </section>
+              </section>
           </div>
         </div>
       </div>
@@ -214,154 +194,55 @@
           <div class="item">
             <img src="assets/images/courses-01.jpg" alt="Course #1">
             <div class="down-content">
-              <h4>Digital Marketing</h4>
+              <h4>Birthday-party Planning</h4>
               <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
               <div class="author-image">
                 <img src="assets/images/author-01.png" alt="Author 1">
-              </div>
-              <div class="text-button-pay">
-                <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
           <div class="item">
             <img src="assets/images/courses-02.jpg" alt="Course #2">
             <div class="down-content">
-              <h4>Business World</h4>
+              <h4>Anniversary Planning</h4>
               <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.</p>
               <div class="author-image">
                 <img src="assets/images/author-02.png" alt="Author 2">
-              </div>
-              <div class="text-button-free">
-                <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
           <div class="item">
             <img src="assets/images/courses-03.jpg" alt="Course #3">
             <div class="down-content">
-              <h4>Media Technology</h4>
+              <h4>Wedding Planning</h4>
               <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
               </p>
               <div class="author-image">
                 <img src="assets/images/author-03.png" alt="Author 3">
-              </div>
-              <div class="text-button-pay">
-                <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
               </div>
             </div>
           </div>
           <div class="item">
             <img src="assets/images/courses-04.jpg" alt="Course #4">
             <div class="down-content">
-              <h4>Communications</h4>
+              <h4>Baby-Shower Planning</h4>
               <p>Download free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
               <div class="author-image">
                 <img src="assets/images/author-04.png" alt="Author 4">
               </div>
-              <div class="text-button-free">
-                <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
-              </div>
             </div>
           </div>
           <div class="item">
             <img src="assets/images/courses-05.jpg" alt="">
             <div class="down-content">
-              <h4>Business Ethics</h4>
+              <h4>Corporate Planning</h4>
               <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
               </p>
               <div class="author-image">
                 <img src="assets/images/author-05.png" alt="">
               </div>
-              <div class="text-button-pay">
-                <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
-              </div>
             </div>
           </div>
-          <div class="item">
-            <img src="assets/images/courses-01.jpg" alt="">
-            <div class="down-content">
-              <h4>Photography</h4>
-              <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.</p>
-              <div class="author-image">
-                <img src="assets/images/author-01.png" alt="">
-              </div>
-              <div class="text-button-free">
-                <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-02.jpg" alt="">
-            <div class="down-content">
-              <h4>Web Development</h4>
-              <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-              </p>
-              <div class="author-image">
-                <img src="assets/images/author-02.png" alt="">
-              </div>
-              <div class="text-button-free">
-                <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-03.jpg" alt="">
-            <div class="down-content">
-              <h4>Learn HTML CSS</h4>
-              <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
-              <div class="author-image">
-                <img src="assets/images/author-03.png" alt="">
-              </div>
-              <div class="text-button-pay">
-                <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-04.jpg" alt="">
-            <div class="down-content">
-              <h4>Social Media</h4>
-              <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-              </p>
-              <div class="author-image">
-                <img src="assets/images/author-04.png" alt="">
-              </div>
-              <div class="text-button-pay">
-                <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-05.jpg" alt="">
-            <div class="down-content">
-              <h4>Digital Arts</h4>
-              <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.</p>
-              <div class="author-image">
-                <img src="assets/images/author-05.png" alt="">
-              </div>
-              <div class="text-button-free">
-                <a href="#">Free <i class="fa fa-angle-double-right"></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <img src="assets/images/courses-01.jpg" alt="">
-            <div class="down-content">
-              <h4>Media Streaming</h4>
-              <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-              </p>
-              <div class="author-image">
-                <img src="assets/images/author-01.png" alt="">
-              </div>
-              <div class="text-button-pay">
-                <a href="#">Pay <i class="fa fa-angle-double-right"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
 
   <section class="section contact" data-section="section6">
