--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
       </div>
     </div>
   </section>
+
   <section class="section courses" data-section="section4">
     <div class="container-fluid">
       <div class="row">
@@ -191,55 +192,33 @@
         </div>
         <div class="owl-carousel owl-theme">
           <div class="item">
-            <img src="assets/images/courses-01.jpg" alt="Course #1">
+            <img src="assets/images/courses-01.png" alt="Course #1">
             <div class="down-content">
               <h4>Birthday-party Planning</h4>
-              <p>You can get free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
-              <div class="author-image">
-                <img src="assets/images/author-01.png" alt="Author 1">
-              </div>
             </div>
           </div>
           <div class="item">
             <img src="assets/images/courses-02.jpg" alt="Course #2">
             <div class="down-content">
               <h4>Anniversary Planning</h4>
-              <p>Quisque cursus augue ut velit dictum, quis volutpat enim blandit. Maecenas a lectus ac ipsum porta.</p>
-              <div class="author-image">
-                <img src="assets/images/author-02.png" alt="Author 2">
-              </div>
             </div>
           </div>
           <div class="item">
             <img src="assets/images/courses-03.jpg" alt="Course #3">
             <div class="down-content">
-              <h4>Wedding Planning</h4>
-              <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-              </p>
-              <div class="author-image">
-                <img src="assets/images/author-03.png" alt="Author 3">
-              </div>
+              <h4>Wedding Planning</h4>\
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-04.jpg" alt="Course #4">
+            <img src="assets/images/courses-04.jpeg" alt="Course #4">
             <div class="down-content">
               <h4>Baby-Shower Planning</h4>
-              <p>Download free images and videos for your websites by visiting Unsplash, Pixabay, and Pexels.</p>
-              <div class="author-image">
-                <img src="assets/images/author-04.png" alt="Author 4">
-              </div>
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-05.jpg" alt="">
+            <img src="assets/images/courses-05.jpeg" alt="Course #5">
             <div class="down-content">
               <h4>Corporate Planning</h4>
-              <p>Pellentesque ultricies diam magna, auctor cursus lectus pretium nec. Maecenas finibus lobortis enim.
-              </p>
-              <div class="author-image">
-                <img src="assets/images/author-05.png" alt="">
-              </div>
             </div>
           </div>
   </section>
