--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
         <div class="owl-carousel owl-theme">
           <div class="item">
-            <img src="assets/images/courses-01.png" alt="Course #1">
+            <img src="assets/images/courses-01.jpg" alt="Course #1">
             <div class="down-content">
               <h4>Birthday-party Planning</h4>
             </div>
@@ -210,13 +210,13 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-04.jpeg" alt="Course #4">
+            <img src="assets/images/courses-04.jpg" alt="Course #4">
             <div class="down-content">
               <h4>Baby-Shower Planning</h4>
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-05.jpeg" alt="Course #5">
+            <img src="assets/images/courses-05.jpg" alt="Course #5">
             <div class="down-content">
               <h4>Corporate Planning</h4>
             </div>
