--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <div class="item">
             <img src="assets/images/courses-03.jpg" alt="Course #3">
             <div class="down-content">
-              <h4>Wedding Planning</h4>\
+              <h4>Wedding Planning</h4>
             </div>
           </div>
           <div class="item">
