--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </div>
           </div>
           <div class="item">
-            <img src="assets/images/courses-3.jpg" alt="Course #3">
+            <img src="assets/images/courses-3.png" alt="Course #3">
             <div class="down-content">
               <h4>Wedding Planning</h4>
             </div>
